--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     
     <div class="relative z-10 flex flex-col items-center justify-center min-h-screen text-center px-4">
-      <h1 class="text-4xl font-bold mb-4">Band Name Generator</h1>
+      <h1 class="text-4xl font-bold mb-4 animate-pulse">Band Name Generator</h1>
       <p class="mb-4">Click the button to reveal your new band name.</p>
 
-      <div id="band-name" class="text-2xl font-semibold mb-6">
+      <div id="band-name" class="text-2xl font-semibold mb-6 animate-pulse">
         
       </div>
 
